# envmgr

./: Cargo.toml  README.md  environment.yaml
sample_data/: sample_1.yaml  sample_2.yaml  sample_3.yaml  sample_4.yaml
src/: eval.rs  main.rs
src/data/: condition.rs  de.rs  impls.rs  mod.rs
src/data/de/: condition.rs  impls.rs  mod.rs  one_or_more.rs  path_or_val.rs  utils.rs
src/eval/: condition.rs  mod.rs
