[package]
name = "envmgr"
version = "0.1.0"
authors = ["Rebecca Turner <rbt@sent.as>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tracing = { version = "0.1.18", features = ["attributes"] }
color-eyre = "0.5.1"
tracing-error = "0.1.2"
dirs = "3.0.1"
serde_yaml = "0.8.13"
structopt = "0.3.16"
wyz = "0.2.0"
shellexpand = "2.0.0"
